--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ h6 {
           
             <div class="row column" style="margin-bottom: 60px;">
             <h5 style="position:fixed; top:0px; margin:auto; padding-bottom: 10px; padding-top: 10px;z-index:100000; width:100%; background: white;"> <a href="#publications">Publications</a> | <a href="#newsletters">Newsletters </a> | <a href="#podcasts">Podcasts </a> | <a href="#yt-channels">Youtube Channels </a> | <a href="#misc">Misc.</a></h5>
-              <img style="margin-top: 50px; margin-left: -12px;" src="https://i.imgsafe.org/5ca646c7d8.png">
+              <img style="margin-top: 50px; margin-left: -12px; text-shadow: red 0 -2px;" src="https://i.imgsafe.org/5ca646c7d8.png">
               <p class="lead">The best resources about Artificial Intelligence and Machine Learning. </p>
   
             </div>
