--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ h6 {
             <div class="row column" style="margin-bottom: 60px;">
             <h5 style="position:fixed; top:0px; margin:auto; padding-bottom: 10px; padding-top: 10px;z-index:100000; width:100%; background: white;"> <a href="#publications">Perspectives</a> | <a href="#books">Books </a> |<a href="#newsletters"> Newsletters </a> | <a href="#podcasts">Podcasts </a> | <a href="#yt-channels">Videos </a></h5>
               <img style="margin-top: 50px; margin-left: 0px;" src="https://i.imgsafe.org/8167858a56.png">
-              <p class="lead">The best resources for learning and understanding artificial intelligence and machine learning.</p>
+                <p class="lead">The best directory of artificial intelligence/machine learning resources. </p>
   
             </div>
 
